--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>litemall-admin</title>
-  </head>
+   </head>
   <body>
-    <script src=<%= BASE_URL %>/tinymce4.7.5/tinymce.min.js></script>
+<!--  <script src=<%= BASE_URL %>/qqmap1.1/qqmap.js></script>-->
+  <script src=<%= BASE_URL %>/tinymce4.7.5/tinymce.min.js></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
